# folio

./: .gitignore  Dockerfile  README.md  docker-compose.yml  docker-entrypoint.sh  eslint.config.mjs  package-lock.json  package.json  pyproject.toml  sample.env  tsconfig.json
components/: DashboardNavbar.tsx  DashboardShell.tsx  IndexHeader.tsx  LoggedInHeader.tsx  ThemeToggler.tsx
config/: sample.env  settings.py  urls.py
css/: GradientSegmentedControl.module.css  NavbarSimple.module.css  TableSort.module.css
expenses/: models.py  serializers.py  views.py
lib/: auth.ts
prisma/: schema.prisma
prisma/migrations/20250619215912_init/: migration.sql
prisma/migrations/20250909155900_new/: migration.sql
prisma/migrations/20250911040106_use_uuid/: migration.sql
prisma/migrations/20250911222600_expense_date/: migration.sql
prisma/migrations/20250913205304_expense_date_fix/: migration.sql
prisma/migrations/20251028205704_add_expense_recurrence_fields/: migration.sql
prisma/migrations/20260428212808_add_assets/: migration.sql
src/: constants.ts
src/app/: Header.tsx  HeaderMegaMenu.module.css  layout.tsx  page.tsx  providers.tsx  theme.ts
src/app/auth/login/: LoginForm.tsx  page.tsx  (+1 more)
src/app/dashboard/: DashboardLayout.tsx  expenseSummary.ts  layout.tsx  page.tsx  summary-db.ts
src/app/register/: page.tsx
src/lib/: auth.ts  dbReturnAPI.tsx  errors.ts  prisma.ts  query-builder.ts  schemas.ts  validators.ts  zodMantine.ts
src/lib/querys/: types.ts
src/services/: factory.service.ts
types/: api.ts  asset.ts  expense.ts  next-auth.d.ts  types.d.ts
(+27 files in other folders)
